micropostsがない場合のエラー

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
 </p>
 <p>
   <strong>Micropost:</strong>
-  <%= @micropost.content %>
+  <%= @micropost.content if @micropost.present? %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
