--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -11,6 +11,6 @@
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
-<%# <%= link_to image_tag("kitten.jpg", alt: "Rails logo"),
-                        'http://rubyonrails.org/' %>
+        'http://rubyonrails.org/' %>
+<%#= image_tag("kitten.png", alt: "Kitten") %>
+
